# Unitree_Z1_Control

./: README.md
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/src/: fk.cpp  ik.cpp
src/robot/: .setup_assistant  CMakeLists.txt  package.xml
src/robot/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  z1_description.ros2_control.xacro  z1_description.srdf  z1_description.urdf.xacro
src/robot/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  usr_moveit.launch.py  warehouse_db.launch.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot_bringup.launch.py  robot_simulation.launch.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/include/robot_control/: cubicSpline.h  robot_control.h
src/robot_control/src/: robot_control.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: z1.urdf.xacro  z1_const.urdf.xacro  z1_gazebo.urdf.xacro
src/robot_serial/: CMakeLists.txt  package.xml
src/robot_serial/launch/: robot_serial.launch.py
src/robot_serial/src/: talker.cpp
